--- a/keahlian1.html
+++ b/keahlian1.html
@@ -73,7 +73,7 @@
 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?q=80&w=2070&auto=format&fit=crop" alt="Financial reporting charts and graphs">
+                        <img src="skill-thumbnail-1.jpg" alt="Menyusun laporan keuangan yang komprehensif">
                     </div>
                     <div class="detail-text-column">
                         <h2>Clarity and Compliance</h2>
@@ -83,7 +83,10 @@
                 </div>
 
                 <div class="competencies-section">
-                     <h3 class="subsection-title">Key Competencies</h3>
+                     <h3 class="subsection-title">Key Competencies in Financial Reporting</h3>
+                     <p class="subsection-description" style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">
+                        My expertise in Financial Reporting is built upon three core pillars, ensuring every report is accurate, compliant, and insightful.
+                     </p>
                     <div class="competency-grid">
                         <div class="competency-card">
                             <i class="fas fa-book"></i>
