--- a/keahlian2.html
+++ b/keahlian2.html
@@ -73,7 +73,7 @@
 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1585331505473-7586f82259a4?q=80&w=2070&auto=format&fit=crop" alt="Tax forms and a calculator">
+                        <img src="skill-thumbnail-2.jpg" alt="Perencanaan dan kepatuhan pajak">
                     </div>
                     <div class="detail-text-column">
                         <h2>Navigating Tax Complexity</h2>
