--- a/keahlian4.html
+++ b/keahlian4.html
@@ -73,7 +73,7 @@
 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1632236542614-417e22b988d3?q=80&w=2070&auto=format&fit=crop" alt="Business meeting with financial projection charts">
+                        <img src="skill-thumbnail-4.jpg" alt="Membuat model untuk budgeting dan forecasting">
                     </div>
                     <div class="detail-text-column">
                         <h2>Planning for the Future</h2>
@@ -83,7 +83,10 @@
                 </div>
 
                 <div class="competencies-section">
-                     <h3 class="subsection-title">Key Competencies</h3>
+                     <h3 class="subsection-title">Key Competencies in Budgeting & Forecasting</h3>
+                     <p class="subsection-description" style="text-align: center; max-width: 800px; margin: 0 auto 40px auto;">
+                        Effective financial planning is the cornerstone of business success. My skills in this area are focused on creating a clear and strategic financial future.
+                     </p>
                     <div class="competency-grid">
                         <div class="competency-card">
                             <i class="fas fa-calculator"></i>
