--- a/keahlian3.html
+++ b/keahlian3.html
@@ -73,7 +73,7 @@
 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1454165804606-c3d57bc86b40?q=80&w=2070&auto=format&fit=crop" alt="Auditor examining financial documents">
+                        <img src="skill-thumbnail-3.jpg" alt="Proses audit modern dengan teknologi">
                     </div>
                     <div class="detail-text-column">
                         <h2>Ensuring Accuracy and Integrity</h2>
